[gd_scene load_steps=11 format=3 uid="uid://firkt3fefcmg"]

[ext_resource type="Script" path="res://scripts/world_3.gd" id="1_0p5ru"]
[ext_resource type="Texture2D" uid="uid://buroxblm2jn56" path="res://images/backgrounds/world_3_bg.png" id="2_8nc5f"]
[ext_resource type="PackedScene" uid="uid://i4misnd337pc" path="res://scenes/ships/ship.tscn" id="3_6qfmr"]
[ext_resource type="PackedScene" uid="uid://rxqnfqeqvu7g" path="res://scenes/in_game_items/interaction_manager.tscn" id="4_5siea"]
[ext_resource type="PackedScene" uid="uid://drhmh4j1pappx" path="res://scenes/in_game_items/boosters_manager.tscn" id="5_knil5"]
[ext_resource type="PackedScene" uid="uid://df60qnjmhwiiv" path="res://scenes/in_game_items/life_steal_manager.tscn" id="6_p7voy"]
[ext_resource type="PackedScene" uid="uid://dx6i6ol78mnea" path="res://scenes/in_game_items/regeneration_manager.tscn" id="7_s0hqj"]
[ext_resource type="PackedScene" uid="uid://dn5vw6nrt546h" path="res://scenes/gold_manager.tscn" id="8_twuyo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j2yji"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efete"]
bg_color = Color(0.160784, 0.0823529, 0.854902, 1)

[node name="World3" type="Node2D" groups=["Mundo"]]
script = ExtResource("1_0p5ru")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(642, -775)
texture = ExtResource("2_8nc5f")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Ship" parent="." instance=ExtResource("3_6qfmr")]
position = Vector2(621, 626)

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_right = 1280.0
offset_bottom = 27.0
scale = Vector2(1, 0.56)
theme_override_styles/background = SubResource("StyleBoxFlat_j2yji")
theme_override_styles/fill = SubResource("StyleBoxFlat_efete")
show_percentage = false

[node name="InteractionManager" parent="." instance=ExtResource("4_5siea")]

[node name="BoostersManager" parent="." instance=ExtResource("5_knil5")]

[node name="LifeStealManager" parent="." instance=ExtResource("6_p7voy")]

[node name="RegenerationManager" parent="." instance=ExtResource("7_s0hqj")]

[node name="AbilityIconsContainer" type="BoxContainer" parent="."]
offset_left = 72.0
offset_top = 598.0
offset_right = 112.0
offset_bottom = 638.0

[node name="GoldManager" parent="." instance=ExtResource("8_twuyo")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
